Basic slide in & out functionality added to settings menu. Some alignment issues still to be addressed but main goal here was to be able to alter the styles of the open and closed menus. Next step is to add modal for change name and change theme.

--- a/css/main.css
+++ b/css/main.css
@@ -189,7 +189,25 @@ SWITCHES AND COUNTER BELOW*/
     margin-top: 20px;
     margin-left: 10px;
     font-size: 1.5em;
-    border-radius: 5px;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
+}
+
+.settings-header-open {
+    display: flex;
+    align-items: center;
+    background-color: rgba(255, 255, 255, 0.4);
+    width: 100%;
+    height: 35px;
+    margin-top: 20px;
+    margin-left: 10px;
+    font-size: 1.5em;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+    border-bottom-left-radius: 0px;
+    border-bottom-right-radius: 0px;
 }
 
 .settings-title {
@@ -210,12 +228,32 @@ SWITCHES AND COUNTER BELOW*/
     display: grid;
     grid-template-columns: 4fr 1fr;
     width: 100%;
-    height: 200px;
+    max-height: 0px;
+    background-color: rgba(255, 255, 255, 0.4);
+    margin-left: 10px;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
+    padding-top: 0px;
+    transition: max-height padding-top 0.9s;
+    -moz-transition: max-height padding-top 0.9s;
+    -webkit-transition: max-height padding-top 0.9s;
+    overflow-x: hidden;
+}
+
+.settings-options-open {
+    display: grid;
+    grid-template-columns: 4fr 1fr;
+    width: 100%;
+    max-height: 200px;
     background-color: rgba(255, 255, 255, 0.4);
     margin-left: 10px;
     border-bottom-left-radius: 5px;
     border-bottom-right-radius: 5px;
     padding-top: 20px;
+    z-index: 1;
+    transition: max-height padding-top 0.9s;
+    -moz-transition: max-height padding-top 0.9s;
+    -webkit-transition: max-height padding-top 0.9s;
 }
 
 .name, .theme, .sound {
